--- a/resources/terrain_config.yaml
+++ b/resources/terrain_config.yaml
@@ -11,3 +11,27 @@ entities:
     y: 150.0
     width: 100.0
     height: 50.0
+  - x: -200
+    y: 0.0
+    width: 200.0
+    height: 50.0
+  - x: -1000
+    y: 0.0
+    width: 700.0
+    height: 50.0
+  - x: 640
+    y: 0.0
+    width: 1000.0
+    height: 50.0
+  - x: 340.0
+    y: -200.0
+    width: 500.0
+    height: 50.0
+  - x: 0.0
+    y: -500.0
+    width: 500.0
+    height: 50.0
+  - x: -200
+    y: -250.0
+    width: 500.0
+    height: 50.0
