renderer solo dibuja y actualiza el zoom con patos vivos

--- a/resources/current_map.yaml
+++ b/resources/current_map.yaml
@@ -1,6 +1,6 @@
 # Descomentar el mapa que queres usar y comentar el otro
-current_map: mapa_laguna
-#current_map: mapa_azul
+# current_map: mapa_laguna
+current_map: mapa_azul
 
 mapa_fondos:
   mapa_azul: fondo_azul.png
