--- a/resources/mapa_azul.yaml
+++ b/resources/mapa_azul.yaml
@@ -1,24 +1,24 @@
 entities:
+  # - x: -50.0
+  #   y: 400.0
+  #   width: 1300.0
+  #   height: 50.0
+  #   texture: piso_azul
   - x: -50.0
-    y: 400.0
+    y: -300.0
     width: 1300.0
     height: 50.0
     texture: piso_azul
-  - x: -50.0
-    y: -300.0
-    width: 1300.0
-    height: 50.0
-    texture: piso_azul
-  - x: -50.0
-    y: -300.0
-    width: 50.0
-    height: 700.0
-    texture: pared_azul
-  - x: 1200.0
-    y: -300.0
-    width: 50.0
-    height: 700.0
-    texture: pared_azul
+  # - x: -50.0
+  #   y: -300.0
+  #   width: 50.0
+  #   height: 700.0
+  #   texture: pared_azul
+  # - x: 1200.0
+  #   y: -300.0
+  #   width: 50.0
+  #   height: 700.0
+  #   texture: pared_azul
   - x: 300.0
     y: 400.0
     width: 250.0
@@ -36,7 +36,7 @@ entities:
     texture: piso_azul
   - x: 900.0
     y: 100.0
-    width: 300.0
+    width: 200.0
     height: 30.0
     texture: piso_azul
   - x: 200.0
