--- a/resources/mapa_laguna.yaml
+++ b/resources/mapa_laguna.yaml
@@ -1,24 +1,9 @@
 entities:
   - x: -50.0
-    y: 400.0
-    width: 1300.0
+    y: -300.0
+    width: 1000.0
     height: 50.0
     texture: piso_laguna
-  - x: -50.0
-    y: -300.0
-    width: 1300.0
-    height: 50.0
-    texture: piso_laguna
-  - x: -50.0
-    y: -300.0
-    width: 50.0
-    height: 700.0
-    texture: pared_laguna
-  - x: 1200.0
-    y: -300.0
-    width: 50.0
-    height: 700.0
-    texture: pared_laguna
   - x: 100.0
     y: 250.0
     width: 200.0
@@ -59,3 +44,5 @@ entities:
     width: 200.0
     height: 30.0
     texture: piso_laguna
+spawn_place_patos:
+  - x:
