--- a/resources/mapa_azul.yaml
+++ b/resources/mapa_azul.yaml
@@ -55,3 +55,51 @@ entities:
     width: 30.0
     height: 100.0
     texture: pared_azul
+  - x: 600
+    y: 300.0
+    width: 100.0
+    height: 30.0
+    texture: pared_azul
+spawn_places_patos:
+  - x: 610
+    y: 330
+  - x: 200
+    Y: 180
+  - x: 835
+    Y: -250
+  - x: 125
+    Y: -250
+  - x: 965
+    Y: 180
+spawn_places_cajas:
+  - x: 505
+    y: -20
+  - x: 355
+    y: -250
+  - x: 330
+    y: 180
+  - x: 480
+    y: 430
+  - x: 540
+    y: -250
+spawn_places_armas:
+  - x: 610
+    y: -250
+  - x: 905
+    y: -120
+  - x: 550
+    y: 130
+  - x: 220
+    y: 30
+  - x: 720
+    y: -20
+  - x: 900
+    y: 130
+  - x: 390
+    y: 430
+  - x: 865
+    y: 430
+  - x: 110
+    y: 180
+  - x: -40
+    y: 250
