--- a/resources/mapa_desierto.yaml
+++ b/resources/mapa_desierto.yaml
@@ -1,6 +1,76 @@
 entities:
-  - x: -50.0
+  - x: 100.0
     y: -300.0
     width: 1000.0
     height: 50.0
+    texture: piso_desierto
+  - x: 100.0
+    y: 250.0
+    width: 200.0
+    height: 30.0
+    texture: piso_desierto
+  - x: 900.0
+    y: 250.0
+    width: 200.0
+    height: 30.0
+    texture: piso_desierto
+  - x: 550.0
+    y: 180.0
+    width: 100.0
+    height: 100.0
+    texture: piso_desierto
+  - x: 550.0
+    y: -50.0
+    width: 100.0
+    height: 30.0
+    texture: piso_desierto
+  - x: 90.0
+    y: -150.0
+    width: 200.0
+    height: 30.0
+    texture: piso_desierto
+  - x: 900.0
+    y: -150.0
+    width: 200.0
+    height: 30.0
+    texture: piso_desierto
+  - x: 950.0
+    y: 0.0
+    width: 50.0
+    height: 30.0
+    texture: piso_desierto
+  - x: 200.0
+    y: 0.0
+    width: 50.0
+    height: 30.0
+    texture: piso_desierto
+  - x: 250.0
+    y: 120.0
+    width: 50.0
+    height: 30.0
+    texture: piso_desierto
+  - x: 1000.0
+    y: 120.0
+    width: 150.0
+    height: 30.0
+    texture: piso_desierto
+  - x: 350.0
+    y: 50.0
+    width: 180.0
+    height: 30.0
+    texture: piso_desierto
+  - x: 700.0
+    y: 50.0
+    width: 180.0
+    height: 30.0
+    texture: piso_desierto
+  - x: 700.0
+    y: 200.0
+    width: 70.0
+    height: 30.0
+    texture: piso_desierto
+  - x: 400.0
+    y: 200.0
+    width: 70.0
+    height: 30.0
     texture: piso_desierto
