MI PRIMER TEST y comienzo de refactor de renderer

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,12 @@
 target_sources(taller_tests
     PRIVATE
     # .cpp files
-    foo.cpp
+    # foo.cpp
+    test_client_protocol.cpp
+    client_to_server_tests.cpp
     PUBLIC
     # .h files
+    socket_interface.h
+    test_acceptor_thread.h
+    mock_socket.h
     )
