implementado el laser rifle (falta el rebote de los proyectiles)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,7 +250,11 @@ if(TALLER_SERVER)
 			server/server_guns/PewPewLaser.cpp
 			server/server_guns/PewPewLaser.h
 			server/server_guns/PewPewLaserAmmo.cpp
-			server/server_guns/PewPewLaserAmmo.h)
+			server/server_guns/PewPewLaserAmmo.h
+			server/server_guns/LaserRifle.cpp
+			server/server_guns/LaserRifle.h
+			server/server_guns/LaserRifleAmmo.cpp
+			server/server_guns/LaserRifleAmmo.h)
 
     # Make them depend on taller_common lib
     add_dependencies(taller_server taller_common)
