--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,11 +2,13 @@ target_sources(taller_tests
     PRIVATE
     # .cpp files
     # foo.cpp
-    test_client_protocol.cpp
+    server_to_client_tests.cpp
     client_to_server_tests.cpp
+    main.cpp
     PUBLIC
     # .h files
     socket_interface.h
     test_acceptor_thread.h
     mock_socket.h
+    protocol_test.h
     )
