mapa desierto arreglado

--- a/resources/mapa_desierto.yaml
+++ b/resources/mapa_desierto.yaml
@@ -44,11 +44,6 @@ entities:
     width: 50.0
     height: 30.0
     texture: piso_desierto
-  - x: 250.0
-    y: 120.0
-    width: 50.0
-    height: 30.0
-    texture: piso_desierto
   - x: 1000.0
     y: 120.0
     width: 150.0
@@ -74,3 +69,44 @@ entities:
     width: 70.0
     height: 30.0
     texture: piso_desierto
+spawn_places_patos:
+  - x: 985
+    y: 280
+  - x: 135
+    y: 280
+  - x: 1020
+    y: -120
+  - x: 110
+    y: -120
+  - x: 550
+    y: -230
+spawn_places_cajas:
+  - x: 705
+    y: 230
+  - x: 755
+    y: -250
+  - x: 360
+    y: -250
+  - x: 400
+    y: 230
+spawn_places_armas:
+  - x: 220
+    y: 280
+  - x: 905
+    y: 280
+  - x: 565
+    y: -20
+  - x: 485
+    y: -250
+  - x: 625
+    y: -250
+  - x: 970
+    y: -120
+  - x: 750
+    y: 80
+  - x: 410
+    y: 80
+  - x: 190
+    y: -250
+  - x: 965
+    y: -250
